syntax = "proto3";

package opi_evpn_bridge.pkg.netlink;

option go_package = "github.com/opiproject/opi-evpn-bridge/pkg/netlink/proto/gen/go";

service ManagementService {
    // Control of the IPU Infra Mgr
    rpc DumpNetlinkDB(DumpNetlinkDbRequest) returns (DumpNetlinkDbResult) {}
}

message DumpNetlinkDbRequest {
    bool details = 1;
}

message DumpNetlinkDbResult {
    enum ErrorCode {
        OK = 0;
        INTERNAL_ERROR = 1;
    }
    ErrorCode error_code = 1;
    string details = 2;
}
